codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
   gpt-5.5 default │  /tmp/project │ API key

  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [ ] JavaScript REPL  Enable a persistent Node-backed JavaScript REPL for
                       interactive website debugging and other inline
                       JavaScript execution capabilities.
  [x] Shell tool       Allow the model to run shell commands.

  Press space to select or enter to save for next conversation
